--- a/src/app/pages/layout/layout.html
+++ b/src/app/pages/layout/layout.html
@@ -10,10 +10,10 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in" (click)="onLogoff()"></span> Log Off</a></li>
     </ul>
   </div>
 </nav>
 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
